--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -1,8 +1,78 @@
-$primaryColor: #14D8FF;
-$secondaryColor: #7EEAFF;
+$primaryColor: #14d8ff;
+$secondaryColor: #7eeaff;
 $backgroundColor: #141414;
 $cardsColor: #090909;
-$textColor: #EEEEEE;
-$buttonMenuColor: linear-gradient(to right, rgba(20,216,255,1) , rgba(0,214,255,1));
+$textColor: #eeeeee;
+$buttonMenuColor: linear-gradient(to right,
+  rgba(20, 216, 255, 1),
+  rgba(0, 214, 255, 1)
+);
+
+body {
+  font-family: 'Fira Sans', sans-serif;
+}
+
+.btn {
+  background-color: $primaryColor;
+  display: grid;
+  place-items: center;
+  border-radius: 24px;
+
+}
+
+
+.header {
+  background-color: #000000;
+  width: 100%;
+  height: 80px;
+  // display: flex;
+  
+  
+  nav {
+    margin: 0 auto;
+    max-width: 1160px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 15px;
+  }
+}
+
+.logo {
+  font-size: 2.625rem;
+  font-weight: 600;
+  color: #fff;
+
+  span {
+    color: $primaryColor;
+  }
+}
+
+.headerMenu {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+
+  li a{
+    font-size: 1.2rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #fff;
+
+  }
+
+  li+li {
+    margin-left: 30px;
+  }
+
+}
+
+.curriculoBotao, .projetosBotao {
+  width: 150px;
+  height: 40px;
+}
+
+
+
 
 
