--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -10,6 +10,11 @@ body {
   border-radius: 24px;
 }
 
+.container {
+  margin: 0 auto;
+  max-width: 1160px;
+}
+
 .header {
   background-color: #000000;
   width: 100%;
@@ -17,8 +22,6 @@ body {
 }
 
 .header nav {
-  margin: 0 auto;
-  max-width: 1160px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
