Pequena correção nos margins e paddings da seção de introdução

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -73,7 +73,7 @@ body {
 
 .intro {
   background-color: #141414;
-  padding-top: 40px;
+  padding-top: 60px;
 }
 
 .introContainer {
@@ -110,6 +110,7 @@ body {
 }
 
 .arteUndraw {
+  margin-top: 60px;
   width: 492px;
   height: 349px;
   background: url("../images/arteUndraw.svg");
