--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,14 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.card-component {
+  background: #090909;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+
 body {
   font-family: 'Fira Sans', sans-serif;
 }
@@ -130,5 +141,88 @@ body {
 
 .redesSociais .redesLista img {
   width: 50px;
+}
+
+.perfil {
+  width: 100%;
+  height: 800px;
+  background: #fff;
+}
+
+.formacao {
+  background: #141414;
+  width: 100%;
+  height: 1024px;
+  color: #fff;
+  position: relative;
+}
+
+.formacao .container {
+  padding-top: 200px;
+}
+
+.formacao .container .tituloFormacao {
+  font-size: 4.375rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  width: 1px;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  position: absolute;
+}
+
+.formacao .container p {
+  font-size: 1.125rem;
+  padding: 10px 0 0 200px;
+}
+
+.formacao .cursos {
+  padding: 60px 0 0 200px;
+  width: 844px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (240px)[3];
+      grid-template-columns: repeat(3, 240px);
+  -ms-grid-rows: (180px)[2];
+      grid-template-rows: repeat(2, 180px);
+  gap: 60px;
+}
+
+.formacao .cursos .curso {
+  width: 240px;
+  height: 180px;
+  padding: 20px 0px 18px 20px;
+  font-size: 1.125rem;
+  display: -ms-grid;
+  display: grid;
+  position: relative;
+}
+
+.formacao .cursos .curso h2 {
+  font-weight: bold;
+  max-width: 213px;
+}
+
+.formacao .cursos .curso h3 {
+  color: #eeeeee;
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
+}
+
+.formacao .cursos .curso h4 {
+  font-size: 0.95rem;
+}
+
+.formacao .cursos .curso::before {
+  content: "";
+  width: 6px;
+  height: 30px;
+  border-radius: 5px;
+  background: #14d8ff;
+  display: block;
+  position: absolute;
+  left: -4px;
+  top: 70px;
 }
 /*# sourceMappingURL=style.css.map */
