Remove a posição fixa das redes sociais

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -130,9 +130,9 @@ body {
 
 .redesSociais {
   margin-right: 30px;
-  position: fixed;
+  position: absolute;
   right: 10px;
-  top: 50%;
+  top: 430px;
   margin-top: -200px;
 
   .redesLista {
