--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -155,16 +155,17 @@ body {
 }
 
 
+
 .formacao {
   background: $backgroundColor;
   width: 100%;
   height: 1024px;
   color: #fff;
   position: relative;
-
+  
   .container {
     padding-top: 200px;
-
+    
     .tituloFormacao {
       font-size: 4.375rem;
       font-weight: bold;
@@ -177,13 +178,15 @@ body {
     
     p {
       font-size: 1.125rem;
-      padding: 10px 0 0 200px;
+      padding: 10px 0 0 160px;
+      max-width: 800px;
     }
   }
   
   .cursos {
-    padding: 60px 0 0 200px;
+    padding-top: 60px;
     width: 844px;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(3, 240px);
     grid-template-rows: repeat(2, 180px);
@@ -230,7 +233,23 @@ body {
 
   }
 
+  .grupo-tecnologias {
+    padding: 55px 0 0 0px;
+    text-align: center;
 
+    h2 {
+      font-size: 1.125rem;
+      font-weight: bold;
+      margin-bottom: 15px;
+    }
+
+    .tecnologias {
+      width: 840px;
+      height: 84px;
+      margin: 0 auto;
+
+    }
+  }
 
 }
 
