--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -246,8 +246,24 @@ body {
     .tecnologias {
       width: 840px;
       height: 84px;
+      padding: 0 50px;
       margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
 
+      .tecnologia {
+        display: flex;
+        align-items: flex-end;
+        img {
+          margin-right: 8px;
+        }
+
+      }
+
+      span{
+        font-size: 1.125rem;
+      }
     }
   }
 
