--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -8,6 +8,12 @@ $buttonMenuColor: linear-gradient(to right,
   rgba(0, 214, 255, 1)
 );
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
+
 * {
   box-sizing: border-box;
 }
@@ -32,26 +38,31 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 1160px;
+  width: 80vw;
 }
 
 .header {
   background-color: #000000;
   width: 100%;
   height: 80px;
-  // display: flex;
-  
+  position: absolute;
+  padding: 30px 0;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
   
   nav {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    padding-top: 15px;
+
   }
 }
 
 .logo {
-  font-size: 2.625rem;
+  font-size: 2.625em;
   font-weight: 600;
   color: #fff;
 
@@ -66,7 +77,7 @@ body {
   align-items: center;
 
   li a{
-    font-size: 1.2rem;
+    font-size: 1.2em;
     font-weight: 500;
     text-transform: uppercase;
     color: #fff;
@@ -80,14 +91,16 @@ body {
 }
 
 .curriculoBotao, .projetosBotao {
-  width: 150px;
-  height: 40px;
+  width: 9.375rem;
+  height: 2.5rem;
 }
 
 .intro {
   // display: flex;
+  // justify-content: space-between;
   background-color: $backgroundColor;
-  padding-top: 60px
+  margin-top: 80px;
+  padding: 3.75rem 0;
   
   
 }
@@ -98,34 +111,50 @@ body {
 }
 
 .arte {
-  padding-top: 100px;
-  width: 445px;
-  height: 510px;
-  background: url('../images/Frame\ 3formaHeader.svg') no-repeat;
+  // display: inline-block;
+  // padding-top: 6.25rem;
+  position: relative;
+  max-width: 25.813rem;
+  // height: 510px;
+
+
+  .intro-texto {
+    position: relative;
+    width: 30rem;
+    top: -410px;
+  }
+  // background: url('../images/Frame\ 3formaHeader.svg') no-repeat;
   color: #fff;
 
   span {
     font-size: 4.5rem;
     font-weight: 600;
     text-transform: uppercase;
-    padding-left: 30px;
+    padding-left: 1.875rem;
   }
 
   .sobrenome {
-    padding-left: 100px;
+    padding-left: 6.25rem;
   }
 
   p {
     font-size: 1.75rem;
-    padding-left:240px;
+    padding-left: 15rem;
   }
 }
 
 .arteUndraw {
-  margin-top: 60px;
-  width: 492px;
-  height: 349px;
-  background: url('../images/arteUndraw.svg');
+  margin: 50px 0 0 60px;
+  // display: inline;
+  // position: absolute;
+  // background: url('../images/arteUndraw.svg') no-repeat;
+  // width: 30.75rem;
+  // margin: 3.75rem 0 0 13rem;
+  // height: 21.813rem;
+
+  img{
+    width: 40.75rem;
+  }
 }
 
 .redesSociais {
@@ -141,7 +170,7 @@ body {
     }
 
     img {
-      width: 50px;
+      width: 44px;
     }
   }
 }
@@ -281,7 +310,8 @@ body {
 }
 
 .redes-footer {
-  padding-top: 70px;
+  // border-right: 1px solid #fff;
+  // padding-right: 100px;
   font-size: 1.5em;
   font-weight: bold;
 
@@ -296,13 +326,35 @@ body {
       }
     }
   }
-
+  
   div + div {
     margin-top: 30px;
   }
 }
 
+.container-footer {
+  padding-top: 70px;
+  display: flex;
+  justify-content: space-between;
 
+  .footer-descricao {
+    width: 25em;
 
+    p {
+      margin-bottom: 50px;
+    }
+  }
+}
+
+.linha {
+  width: 1px;
+  height: 300px;
+  background: #fff;
+}
+
+.copyright {
+  color: #8F8F8F;
+  margin-top: 40px;
+}
 
 
