--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -38,12 +38,12 @@ body {
 
 .container {
   margin: 0 auto;
-  width: 80vw;
+  width: 70vw;
 }
 
 .header {
   background-color: #000000;
-  width: 100%;
+  width: 100vw;
   height: 80px;
   position: absolute;
   padding: 30px 0;
@@ -103,6 +103,23 @@ body {
   padding: 3.75rem 0;
   
   
+  .redesSociais {
+    // margin-right: 30px;
+    position: absolute;
+    right: calc(10px + 2vw);
+     padding-top: 40px;
+  
+    .redesLista {
+      li+li {
+        padding-top: 24px;
+      }
+  
+      img {
+        // width: 44px;
+        width: calc(28px + 1vw);
+      }
+    }
+  }
 }
 
 .introContainer {
@@ -113,21 +130,27 @@ body {
 .arte {
   // display: inline-block;
   // padding-top: 6.25rem;
-  position: relative;
-  max-width: 25.813rem;
+  // position: relative;
   // height: 510px;
+  
+  img {
+    // width: 25.813rem;
+    // width: 80%;
+      
+  }
 
 
   .intro-texto {
     position: relative;
-    width: 30rem;
+    // max-width: 30rem;
     top: -410px;
   }
   // background: url('../images/Frame\ 3formaHeader.svg') no-repeat;
   color: #fff;
 
-  span {
+  h2 {
     font-size: 4.5rem;
+    // font-size: clamp(1rem, 3rem, 4.5rem);
     font-weight: 600;
     text-transform: uppercase;
     padding-left: 1.875rem;
@@ -139,12 +162,12 @@ body {
 
   p {
     font-size: 1.75rem;
-    padding-left: 15rem;
+    padding-left: 12rem;
   }
 }
 
 .arteUndraw {
-  margin: 50px 0 0 60px;
+  margin: 50px 0 0 4vw;
   // display: inline;
   // position: absolute;
   // background: url('../images/arteUndraw.svg') no-repeat;
@@ -152,28 +175,12 @@ body {
   // margin: 3.75rem 0 0 13rem;
   // height: 21.813rem;
 
-  img{
-    width: 40.75rem;
-  }
+  // img{
+  //   max-width: 40.75rem;
+  // }
 }
 
-.redesSociais {
-  margin-right: 30px;
-  position: absolute;
-  right: 10px;
-  top: 430px;
-  margin-top: -200px;
 
-  .redesLista {
-    li+li {
-      padding-top: 24px;
-    }
-
-    img {
-      width: 44px;
-    }
-  }
-}
 
 
 
@@ -187,7 +194,7 @@ body {
 
 .formacao {
   background: $backgroundColor;
-  width: 100%;
+  width: 100vw;
   height: 1024px;
   color: #fff;
   position: relative;
