--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -165,26 +165,34 @@ body {
 .formacao {
   background: #141414;
   width: 100vw;
-  height: 1024px;
   color: #fff;
   position: relative;
+  padding: 200px  0;
 }
 
-.formacao .container {
-  padding-top: 200px;
+.formacao .formacao-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 50px 1fr;
+      grid-template-columns: 50px 1fr;
+  -ms-grid-rows: 60px 1fr;
+      grid-template-rows: 60px 1fr;
 }
 
-.formacao .container .tituloFormacao {
+.formacao .formacao-container .tituloFormacao {
   font-size: 4.375rem;
   font-weight: bold;
   text-transform: uppercase;
   width: 1px;
   word-wrap: break-word;
   white-space: pre-wrap;
-  position: absolute;
+  position: relative;
+  top: -60px;
 }
 
-.formacao .container p {
+.formacao .formacao-container p {
+  -ms-grid-column: 2;
+  grid-column: 2;
   font-size: 1.125rem;
   padding: 10px 0 0 160px;
   max-width: 800px;
@@ -200,7 +208,7 @@ body {
       grid-template-columns: repeat(3, 240px);
   -ms-grid-rows: (180px)[2];
       grid-template-rows: repeat(2, 180px);
-  gap: 60px;
+  gap: 8%;
 }
 
 .formacao .cursos .curso {
@@ -242,8 +250,10 @@ body {
 }
 
 .formacao .grupo-tecnologias {
-  padding: 55px 0 0 0px;
+  -ms-grid-column: 2;
+  grid-column: 2;
   text-align: center;
+  margin: 0 auto;
 }
 
 .formacao .grupo-tecnologias h2 {
