--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -195,12 +195,15 @@ body {
 .formacao {
   background: $backgroundColor;
   width: 100vw;
-  height: 1024px;
+  // height: 1024px;
   color: #fff;
   position: relative;
+  padding: 200px  0;
   
-  .container {
-    padding-top: 200px;
+  .formacao-container {
+    display: grid;
+    grid-template-columns: 50px 1fr;
+    grid-template-rows: 60px 1fr ;
     
     .tituloFormacao {
       font-size: 4.375rem;
@@ -209,10 +212,12 @@ body {
       width: 1px;
       word-wrap: break-word;
       white-space: pre-wrap;
-      position: absolute;
+      position: relative;
+      top: -60px;
     }
     
     p {
+      grid-column: 2;
       font-size: 1.125rem;
       padding: 10px 0 0 160px;
       max-width: 800px;
@@ -226,7 +231,7 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 240px);
     grid-template-rows: repeat(2, 180px);
-    gap: 60px;
+    gap: 8%;
 
 
     .curso {
@@ -270,8 +275,10 @@ body {
   }
 
   .grupo-tecnologias {
-    padding: 55px 0 0 0px;
+    // padding: 0px 0 0 0px;
+    grid-column: 2;
     text-align: center;
+    margin: 0 auto;
 
     h2 {
       font-size: 1.125rem;
